fixed layout issue with modal button

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ button:hover {
     font-size: 15px;
     font-weight: 500;
     position: fixed;
-    top: -5px;
+    top: -10px;
     right: 5px;
 }
 
